[package]
name = "backend-joltamp-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["secrets", "json"] }
serde = { version = "1.0.215", features = ["derive"] }
scylla = "0.15.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }